Secured the dbinit API call with secret key
