# service-data-api/swagger.json
@@ -22,6 +22,13 @@
   "produces": [
     "application/json"
   ],
+  "securityDefinitions": {
+    "X-Secret": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "X-SECRET"
+    }
+  },
   "paths": {
     "/events/filter/{time}": {
       "get": {
@@ -269,10 +276,15 @@
       }     
     },
     "/dbinit": {
-      "get": {
+      "post": {
         "tags": ["Other"],
         "description": "Reset the database, and initialize with seed data",
         "operationId": "dbInit",
+        "security": [
+          {
+            "X-Secret": []
+          }
+        ],
         "produces": [
           "application/json"
         ],
